fix six z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1032,6 +1032,8 @@ header .container .header-main .header-last .header-last__links a svg path {
   grid-row-gap: 0px;
   height: 960px;
   padding: 0 40px;
+  z-index: 2;
+  position: relative;
 }
 .five .container .five-main .five-main__reviews {
   margin: 160px 0 0 0;
