--- a/sass/blocks/_five.sass
+++ b/sass/blocks/_five.sass
@@ -13,6 +13,8 @@
       grid-row-gap: 0px
       height: 960px
       padding: 0 40px
+      z-index: 2
+      position: relative
       .five-main__reviews
         margin: 160px 0 0 0
         .people
